--- a/package.json
+++ b/package.json
@@ -68,5 +68,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "gh-pages": "^6.0.0",
     "prettier": "^3.0.1"
+  },
+  "engines": {
+    "node": "18.17.1"
   }
 }
